--- a/index.html
+++ b/index.html
@@ -19,30 +19,150 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="spider-constructed-by-scrapy" class="anchor" href="#spider-constructed-by-scrapy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Spider Constructed by scrapy</strong>
+</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h2>
+<a id="1-create-your-spider-project" class="anchor" href="#1-create-your-spider-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1. Create your Spider Project</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Open bash (linux) or cmd (Windows)</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<pre><code>$ active snakes # launch py2.7 env
+</code></pre>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>Scrapy now can only work perfectly with python2.x, so we activate the env of python2.7.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<pre><code>$ scrapy startproject xkcd
+</code></pre>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>Thus, we 've already generated a Project named xkcd, we are going to make it more powerful.</p>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<pre><code>$ cd xkcd
+</code></pre>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p><strong>Note :</strong> you must change to xkcd dir, otherwise the project can't execute.</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h2>
+<a id="2-define-your-structured-data" class="anchor" href="#2-define-your-structured-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2. Define your Structured Data</h2>
+
+<p>Edit<code>.\items.py</code> to define fields of scraped items like this.</p>
+
+<pre><code>import scrapy
+
+
+class XkcdItem(scrapy.Item):
+
+    # define the fields for your item here like:
+    name = scrapy.Field()
+    image_urls = scrapy.Field()
+    desc = scrapy.Field()
+    file_paths = scrapy.Field()
+</code></pre>
+
+<p>The example code define a structured data form like this:
+</p>
+
+<table>
+<tr>
+<td><b>name</b></td>
+<td><b>owner</b></td>
+<td><b>price</b></td>
+</tr>
+<tr>
+<td>Coffee</td>
+<td>John</td>
+<td>$ 10</td>
+</tr>
+<tr>
+<td>...</td>
+<td>...</td>
+<td>...</td>
+</tr>
+</table>
+
+<p></p>
+
+<p>Later, we will use well-defined XkcdItem class to instantiate items with scraped data in <code>xkcd_spider.py</code></p>
+
+<h2>
+<a id="3-create-your-spiders" class="anchor" href="#3-create-your-spiders" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3. Create your Spiders</h2>
+
+<p>Define the spiders' behavious to extract the data you wanted. A example to scrape all the link of images in XKCD.com</p>
+
+<pre><code>import os
+import scrapy
+from xkcd.items import XkcdItem
+from scrapy.spiders import Spider
+from scrapy.http import Request
+
+
+class XkcdSpider(scrapy.Spider):
+    name = 'xkcd'
+    allowed_domains = ["xkcd.com/"]
+    start_urls = ["http://xkcd.com"] + ["http://xkcd.com/%d/" % num for num in xrange(1, 4)]
+
+    def parse(self, response):
+
+        # Code Here to instantiate item
+        item = XkcdItem()
+        item['name'] = response.css('div#comic &gt; img::attr("alt")').extract()
+        item['image_urls'] = ["http:" + response.css('div#comic &gt; img::attr("src")').extract()[0]]
+        item['desc'] = response.css('div#comic &gt; img::attr("title")').extract()
+
+        yield item
+</code></pre>
+
+<p>Well Done! we 've had a spider to work for us for get wanted item filled with scraped data.</p>
+
+<h2>
+<a id="4-customize-file-pipelines-to-stroe-data" class="anchor" href="#4-customize-file-pipelines-to-stroe-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4. Customize File Pipelines to Stroe Data</h2>
+
+<ul>
+<li>### FilesPipeline</li>
+</ul>
+
+<pre><code>def file_path(self, request, response=None, info=None):
+      if re.search(r'\d', request.url):
+          media_guid = re.search(r'\d+', request.url).group()
+      else:
+          media_guid = '0'
+      return 'web/%s.html' % (media_guid)
+</code></pre>
+
+<ul>
+<li>### ImagesPipeline</li>
+</ul>
+
+<pre><code>from scrapy.pipelines.images import ImagesPipeline
+from scrapy.exceptions import DropItem
+
+
+class XkcdImgPipeline(ImagesPipeline):
+    def file_path(self, request, response=None, info=None,):
+        image_guid = request.url.split('/')[-1]
+        return 'images/%s' % (image_guid)
+
+    def get_media_requests(self, item, info):
+        for image_url in item['image_urls']:
+            yield scrapy.Request(image_url)
+
+    def item_completed(self, results, item, info):
+        image_paths = [x['path'] for ok, x in results if ok]
+        if not image_paths:
+            raise DropItem("Item contains no images")
+        item['image_paths'] = image_paths
+        yield item
+</code></pre>
+
+<h2>
+<a id="5-configure-setting-of-project" class="anchor" href="#5-configure-setting-of-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5. Configure Setting of Project</h2>
+
+<p><img class="emoji" title=":sunglasses:" alt=":sunglasses:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f60e.png" height="20" width="20" align="absmiddle"></p>
+
+<p><code>$ scrapy crawl xkcd --logfile="xkcd_log.log" -o xkcd.json -t json</code></p>
+
+<p><code>$ scrapy crawl xkcd -a end=10</code></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/EchoBaker/Scrapy_spider">Scrapy spider</a> is maintained by <a href="https://github.com/EchoBaker">EchoBaker</a>.</span>
