--- a/xkcd/downloaded/web/0.html
+++ b/xkcd/downloaded/web/0.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="/s/b0dcca.css" title="Default"/>
-<title>xkcd: City Talk Pages</title>
+<title>xkcd: Algorithms</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <link rel="shortcut icon" href="/s/919f27.ico" type="image/x-icon"/>
 <link rel="icon" href="/s/919f27.ico" type="image/x-icon"/>
@@ -53,27 +53,27 @@ if(/([0-9a-b]+-)[4][0-9a-b]+/.test(mu)) { window.location.href = "http://xkcd.co
 </div>
 <div id="middleContainer" class="box">
 
-<div id="ctitle">City Talk Pages</div>
+<div id="ctitle">Algorithms</div>
 <ul class="comicNav">
 <li><a href="/1/">|&lt;</a></li>
-<li><a rel="prev" href="/1664/" accesskey="p">&lt; Prev</a></li>
+<li><a rel="prev" href="/1666/" accesskey="p">&lt; Prev</a></li>
 <li><a href="//c.xkcd.com/random/comic/">Random</a></li>
 <li><a rel="next" href="#" accesskey="n">Next &gt;</a></li>
 <li><a href="/">&gt;|</a></li>
 </ul>
 <div id="comic">
-<img src="//imgs.xkcd.com/comics/city_talk_pages.png" title="I don&#39;t think the Lakeshore Air Crash Museum really belongs under &#39;Tourist Attractions.&#39; It&#39;s not a museum--it&#39;s just an area near the Lake Festival Laser Show where a lot of planes have crashed." alt="City Talk Pages" />
+<img src="//imgs.xkcd.com/comics/algorithms.png" title="There was a schism in 2007, when a sect advocating OpenOffice created a fork of Sunday.xlsx and maintained it independently for several months. The efforts to reconcile the conflicting schedules led to the reinvention, within the cells of the spreadsheet, of modern version control." alt="Algorithms" />
 </div>
 <ul class="comicNav">
 <li><a href="/1/">|&lt;</a></li>
-<li><a rel="prev" href="/1664/" accesskey="p">&lt; Prev</a></li>
+<li><a rel="prev" href="/1666/" accesskey="p">&lt; Prev</a></li>
 <li><a href="//c.xkcd.com/random/comic/">Random</a></li>
 <li><a rel="next" href="#" accesskey="n">Next &gt;</a></li>
 <li><a href="/">&gt;|</a></li>
 </ul>
 <br />
-Permanent link to this comic: http://xkcd.com/1665/<br />
-Image URL (for hotlinking/embedding): http://imgs.xkcd.com/comics/city_talk_pages.png
+Permanent link to this comic: http://xkcd.com/1667/<br />
+Image URL (for hotlinking/embedding): http://imgs.xkcd.com/comics/algorithms.png
 <div id="transcript" style="display: none"></div>
 <br />
 <hr width="80%" />
